--- a/src/layout/elements/main-section.less
+++ b/src/layout/elements/main-section.less
@@ -3,10 +3,6 @@
  *  The main content area consists of content that is directly related to or expands upon the central topic of a document, 
  *  or the central functionality of an application. ~ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/main
  */
-main {
-  height: 100%;
-}
-
 section,
 fieldset {
   padding: @default-distance;
@@ -54,7 +50,7 @@ fieldset {
   &:not(.center) > aside {
     .single();
 
-    @media (min-width: @md) {
+    @media (min-width: @lg) {
       width: auto;
       min-width: unset;
     }
