--- a/src/theme/default/components/links.less
+++ b/src/theme/default/components/links.less
@@ -8,6 +8,13 @@ a {
     text-decoration: underline;
   }
 
+  &.accent {
+    color: @accent;
+  }
+  &.danger {
+    color: @danger;
+  }
+
   &.button {
     border-radius: 2px;
     color: @button-color;
