--- a/src/utilities/layout-utilities.less
+++ b/src/utilities/layout-utilities.less
@@ -72,6 +72,12 @@
   position: sticky;
   top: 0;
   height: auto;
+
+  & > *:first-child {
+    position: sticky;
+    top: 0;
+    height: auto;
+  }
 }
 
 .full-width {
